--- a/scripts/configs/prometheus_angular_reco.cfg
+++ b/scripts/configs/prometheus_angular_reco.cfg
@@ -2,7 +2,6 @@ project_name: "neptune_prometheus_angular"
 project_save_dir: "./experiments"
 training: false
 accelerator: "gpu"
-num_devices: 1
 dataloader: "prometheus"
 checkpoint: "./experiments/checkpoints/neptune-final.pt"
 resume_training: false
@@ -12,7 +11,7 @@ data_options:
   data_path: "/home/dragonlol1/data/prometheus_cascades_combined"
   val_split: 0.2                # 20% for validation
   split_seed: 42                # For reproducible splits
-h  use_summary_stats: true
+  use_summary_stats: true
 
 model_options:
   in_channels: 9
@@ -26,7 +25,7 @@ model_options:
   loss_fn: "vmf"  # Von Mises Fisher loss for directions
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
-  tokenizer_type: "lightweight"
+  tokenizer_type: "point_cloud"
 
 training_options:
   batch_size: 256
@@ -38,3 +37,4 @@ training_options:
   num_workers: 8
   precision: "bf16-mixed"
   test_precision: "bf16-mixed"
+  grad_clip: 1.0
