--- a/scripts/configs/i3_angular_reco.cfg
+++ b/scripts/configs/i3_angular_reco.cfg
@@ -2,26 +2,25 @@ project_name: "i3_angular_reco"
 project_save_dir: "./experiments"
 training: true
 accelerator: "gpu"
-num_devices: 1
 dataloader: "icecube"
 checkpoint: ""
 resume_training: false
 
 data_options:
   data_path: 
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/mmap_data/IC22737_NuMu"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/mmap_data/IC22739_NuMu"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/mmap_data/IC22740_NuMu"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/mmap_data/IC22747_NuE"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/mmap_data/IC22749_NuE"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/mmap_data/IC22764_NuE"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/felixyu/mmap_data/IC22767_NuTau"
+  - "/home/dragonlol1/data/IC22737_NuMu"
+  - "/home/dragonlol1/data/IC22739_NuMu"
+  - "/home/dragonlol1/data/IC22740_NuMu"
+  - "/home/dragonlol1/data/IC22747_NuE"
+  - "/home/dragonlol1/data/IC22749_NuE"
+  - "/home/dragonlol1/data/IC22764_NuE"
+  - "/home/dragonlol1/data/IC22767_NuTau"
   val_split: 0.2
   split_seed: 42
-  use_summary_stats: false
+  use_summary_stats: true
 
 model_options:
-  in_channels: 1
+  in_channels: 9
   num_patches: 128
   token_dim: 512
   num_layers: 12
@@ -32,7 +31,7 @@ model_options:
   loss_fn: "vmf"
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
-  tokenizer_type: "lightweight"
+  tokenizer_type: "point_cloud"
 
 training_options:
   batch_size: 256
@@ -44,3 +43,4 @@ training_options:
   num_workers: 8
   precision: "bf16-mixed"
   test_precision: "bf16-mixed"
+  grad_clip: 1.0
