--- a/scripts/configs/i3_energy_reco.cfg
+++ b/scripts/configs/i3_energy_reco.cfg
@@ -2,7 +2,6 @@ project_name: "i3_energy_reco"
 project_save_dir: "./experiments"
 training: true
 accelerator: "gpu"
-num_devices: 1
 dataloader: "icecube"
 checkpoint: ""
 resume_training: false
@@ -21,7 +20,7 @@ data_options:
   use_summary_stats: false
 
 model_options:
-  in_channels: 1
+  in_channels: 2
   num_patches: 128
   token_dim: 512
   num_layers: 12
@@ -32,7 +31,7 @@ model_options:
   loss_fn: "gaussian_nll"
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
-  tokenizer_type: "lightweight"
+  tokenizer_type: "point_cloud"
 
 training_options:
   batch_size: 256
@@ -44,3 +43,4 @@ training_options:
   num_workers: 8
   precision: "bf16-mixed"
   test_precision: "bf16-mixed"
+  grad_clip: 1.0
