--- a/scripts/configs/icecube_kaggle_angular_reco.cfg
+++ b/scripts/configs/icecube_kaggle_angular_reco.cfg
@@ -2,7 +2,6 @@ project_name: "neptune_icecube_angular"
 project_save_dir: "./experiments"
 training: false
 accelerator: "gpu"
-num_devices: 1
 dataloader: "kaggle"
 checkpoint: "./experiments/checkpoints/neptune-final.pt"
 resume_training: false
@@ -30,6 +29,7 @@ model_options:
   loss_fn: "vmf"
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
+  tokenizer_type: "point_cloud"
 
 training_options:
   batch_size: 256
@@ -41,3 +41,4 @@ training_options:
   num_workers: 4
   precision: "bf16-mixed"
   test_precision: "bf16-mixed"
+  grad_clip: 1.0
