--- a/scripts/configs/prometheus_energy_reco.cfg
+++ b/scripts/configs/prometheus_energy_reco.cfg
@@ -2,7 +2,6 @@ project_name: "neptune_prometheus_energy"
 project_save_dir: "./experiments"
 training: false
 accelerator: "gpu"
-num_devices: 1
 dataloader: "prometheus"
 checkpoint: "./ckpts/neptune-final-prometheus-energy-reco.pt"
 resume_training: false
@@ -26,6 +25,7 @@ model_options:
   loss_fn: "gaussian_nll"  # Gaussian NLL for energy regression
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
+  tokenizer_type: "point_cloud"
 
 training_options:
   batch_size: 256
@@ -37,3 +37,4 @@ training_options:
   num_workers: 8
   precision: "bf16-mixed"
   test_precision: "bf16-mixed"
+  grad_clip: 1.0
