Update to include improved recos

--- a/configs/train_morphology_classifier_medium.cfg
+++ b/configs/train_morphology_classifier_medium.cfg
@@ -1,4 +1,4 @@
-project_name: "neptune"
+project_name: "neptune_starting_classifier"
 project_save_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MEOWS_ML/src/neptune/projects"
 training: true
 accelerator: "gpu"
