--- a/configs/train_morphology_classifier_micro.cfg
+++ b/configs/train_morphology_classifier_micro.cfg
@@ -1,34 +1,37 @@
-project_name: "neptune"
+project_name: "neptune_morph_micro"
 project_save_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MEOWS_ML/src/neptune/projects"
 training: true
 accelerator: "gpu"
 num_devices: 1
 dataloader: "icecube_parquet"
-checkpoint: ""
-resume_training: false
+checkpoint: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MEOWS_ML/src/neptune/projects/neptune_morph_micro/4nt3dn33/checkpoints/intermediate_model.ckpt"
+resume_training: true
 
 data_options:
   train_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v3b_casc_and_tracks_training"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v4_sig_bkg_training"
   train_data_file_ranges:
-    - [0, 299]
+    - [0, 99]
   valid_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v3b_casc_and_tracks_testing"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v4_sig_bkg_testing"
   valid_data_file_ranges:
-    - [0, 39]
+    - [0, 14]
   use_pulse_series: false
   use_latent_representation: false
-  shuffle_files: true
+  shuffle_files: false
+  use_morphology_hack: true
 
 model_options:
   in_channels: 9
   num_patches: 64
   token_dim: 128
-  num_layers: 4
+  mlp_layers: [128, 256, 512]
+  num_layers: 6
   num_heads: 4
-  hidden_dim: 256
+  hidden_dim: 128
   dropout: 0.1
   downstream_task: "morphology_classification"
+  num_classes: 5
   loss_fn: "cross_entropy"
   k_neighbors: 6
   pool_method: "max"
