--- a/configs/train_starting_classifier.cfg
+++ b/configs/train_starting_classifier.cfg
@@ -4,33 +4,33 @@ training: true
 accelerator: "gpu"
 num_devices: 1
 dataloader: "icecube_parquet"
-checkpoint: ""
-resume_training: false
+checkpoint: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MEOWS_ML/src/neptune/meows_direction_v4/d7qrykzj/checkpoints/intermediate_model.ckpt"
+resume_training: true
 
 data_options:
   train_data_files:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v4_all_tracks_training/"
   train_data_file_ranges:
-    - [0, 499]
+    - [0, 699]
   valid_data_files:
     - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v4_all_tracks_testing/"
   valid_data_file_ranges:
     - [0, 49]
   use_pulse_series: false
   use_latent_representation: false
-  shuffle_files: true
+  shuffle_files: false
 
 model_options:
   in_channels: 9
   num_patches: 128
   token_dim: 512
-  mlp_layers: [256, 612, 768]
+  mlp_layers: [256, 512, 768]
   num_layers: 12
   num_heads: 8
   hidden_dim: 1024
   dropout: 0.1
-  downstream_task: "angular_reco"
-  loss_fn: "vmf"
+  downstream_task: "starting_classification"
+  loss_fn: "binary_cross_entropy"
   k_neighbors: 8
   pool_method: "max"
   pre_norm: true
