--- a/configs/train_visible_inelasticity.cfg
+++ b/configs/train_visible_inelasticity.cfg
@@ -1,5 +1,5 @@
-project_name: "neptune_visible_energy_v2"
-project_save_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MEOWS_ML/src/neptune/projects"
+project_name: "meows_inelasticity"
+project_save_dir: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MEOWS_ML/src/neptune"
 training: true
 accelerator: "gpu"
 num_devices: 1
@@ -9,28 +9,28 @@ resume_training: false
 
 data_options:
   train_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v4_tracks_cascades_training"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v4_all_starting_tracks_training/"
   train_data_file_ranges:
-    - [0, 299]
+    - [0, 749]
   valid_data_files:
-    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v4_tracks_cascades_testing"
+    - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/pweigel/MC/pointcloud_mc/meows_v4_all_starting_tracks_testing/"
   valid_data_file_ranges:
-    - [0, 39]
+    - [0, 74]
   use_pulse_series: false
   use_latent_representation: false
-  shuffle_files: true
+  shuffle_files: false
 
 model_options:
   in_channels: 9
   num_patches: 128
   token_dim: 512
-  mlp_layers: [128, 256, 512]
+  mlp_layers: [256, 512, 768]
   num_layers: 12
   num_heads: 8
-  hidden_dim: 512
+  hidden_dim: 1024
   dropout: 0.1
-  downstream_task: "visible_energy_reco"
-  loss_fn: "log_cosh"
+  downstream_task: "inelasticity_reco"
+  loss_fn: "mae"
   k_neighbors: 8
   pool_method: "max"
   pre_norm: true
@@ -38,9 +38,9 @@ model_options:
 training_options:
   batch_size: 512
   lr: 0.0001
-  lr_schedule: [0, 15]
+  lr_schedule: [0, 30]
   weight_decay: 0.01
-  epochs: 15
+  epochs: 30
   save_epochs: 1
   num_workers: 16
   precision: "bf16-mixed"
