--- a/scripts/configs/prometheus_angular_reco.cfg
+++ b/scripts/configs/prometheus_angular_reco.cfg
@@ -2,7 +2,7 @@ project_name: "neptune_prometheus_angular"
 project_save_dir: "./experiments"
 training: false
 accelerator: "gpu"
-dataloader: "prometheus"
+dataloader: "mmap"
 checkpoint: "./experiments/checkpoints/neptune-final.pt"
 resume_training: false
 
@@ -25,16 +25,15 @@ model_options:
   loss_fn: "vmf"  # Von Mises Fisher loss for directions
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
-  tokenizer_type: "point_cloud"
+  tokenizer_type: "v1"
 
 training_options:
   batch_size: 256
   lr: 0.0001
-  lr_schedule: [0, 5]
+  T_max: 5
   weight_decay: 0.01
   epochs: 5
   save_epochs: 5
   num_workers: 8
-  precision: "bf16-mixed"
-  test_precision: "bf16-mixed"
+  precision: "bf16"
   grad_clip: 1.0
