--- a/scripts/configs/prometheus_energy_reco.cfg
+++ b/scripts/configs/prometheus_energy_reco.cfg
@@ -2,7 +2,7 @@ project_name: "neptune_prometheus_energy"
 project_save_dir: "./experiments"
 training: false
 accelerator: "gpu"
-dataloader: "prometheus"
+dataloader: "mmap"
 checkpoint: "./ckpts/neptune-final-prometheus-energy-reco.pt"
 resume_training: false
 
@@ -25,16 +25,15 @@ model_options:
   loss_fn: "gaussian_nll"  # Gaussian NLL for energy regression
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
-  tokenizer_type: "point_cloud"
+  tokenizer_type: "v1"
 
 training_options:
   batch_size: 256
   lr: 0.0001
-  lr_schedule: [0, 50]
+  T_max: 50
   weight_decay: 0.01
   epochs: 50
   save_epochs: 10
   num_workers: 8
-  precision: "bf16-mixed"
-  test_precision: "bf16-mixed"
+  precision: "bf16"
   grad_clip: 1.0
