--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "torch>=1.12.0",
     "numpy>=1.20.0",
     "fpsample>=0.2.0",
+    "ml-common>=0.1.0",
 ]
 
 [project.optional-dependencies]
