--- a/scripts/configs/i3_angular_reco.cfg
+++ b/scripts/configs/i3_angular_reco.cfg
@@ -1,4 +1,4 @@
-project_name: "i3_angular_reco"
+project_name: "neptune_v2_i3_angular_reco"
 project_save_dir: "./experiments"
 training: true
 accelerator: "gpu"
@@ -26,16 +26,22 @@ model_options:
   downstream_task: "angular_reco"
   loss_fn: "vmf"
   k_neighbors: 8
-  mlp_layers: [128, 256, 512]
   tokenizer_type: "v2"
+  use_spacetime_bias: false
+  spacetime_bias_layers: 2
+  bias_kwargs:
+    light_speed: 0.299792458
+    num_freq: 16
+    clip_value: 4.0
+    scale_divisor: 1024.0
 
 training_options:
   batch_size: 256
   lr: 0.0001
-  T_max: 5
+  T_max: 30
   weight_decay: 0.01
-  epochs: 5
-  save_epochs: 5
+  epochs: 30
+  save_epochs: 10
   num_workers: 8
   precision: "bf16"
   grad_clip: 1.0
