--- a/scripts/configs/icecube_kaggle_angular_reco.cfg
+++ b/scripts/configs/icecube_kaggle_angular_reco.cfg
@@ -28,8 +28,14 @@ model_options:
   downstream_task: "angular_reco"
   loss_fn: "vmf"
   k_neighbors: 8
-  mlp_layers: [256, 512, 768]
   tokenizer_type: "v1"
+  use_spacetime_bias: true
+  spacetime_bias_layers: 2
+  bias_kwargs:
+    light_speed: 0.299792458
+    num_freq: 16
+    clip_value: 4.0
+    scale_divisor: 1024.0
 
 training_options:
   batch_size: 256
