--- a/scripts/configs/prometheus_energy_reco.cfg
+++ b/scripts/configs/prometheus_energy_reco.cfg
@@ -24,8 +24,14 @@ model_options:
   downstream_task: "energy_reco"
   loss_fn: "gaussian_nll"  # Gaussian NLL for energy regression
   k_neighbors: 8
-  mlp_layers: [256, 512, 768]
   tokenizer_type: "v1"
+  use_spacetime_bias: true
+  spacetime_bias_layers: 2
+  bias_kwargs:
+    light_speed: 0.299792458
+    num_freq: 16
+    clip_value: 4.0
+    scale_divisor: 1024.0
 
 training_options:
   batch_size: 256
