--- a/scripts/configs/i3_angular_reco.cfg
+++ b/scripts/configs/i3_angular_reco.cfg
@@ -24,7 +24,7 @@ model_options:
   hidden_dim: 512
   dropout: 0.1
   downstream_task: "angular_reco"
-  loss_fn: "vmf"
+  loss_fn: "combined_vmf_angular"
   k_neighbors: 8
   tokenizer_type: "v2"
   use_spacetime_bias: false
@@ -36,7 +36,7 @@ model_options:
     scale_divisor: 1024.0
 
 training_options:
-  batch_size: 256
+  batch_size: 128
   lr: 0.0001
   T_max: 30
   weight_decay: 0.01
