--- a/scripts/configs/i3_angular_reco.cfg
+++ b/scripts/configs/i3_angular_reco.cfg
@@ -26,17 +26,10 @@ model_options:
   downstream_task: "angular_reco"
   loss_fn: "combined_vmf_angular"
   k_neighbors: 8
-  tokenizer_type: "v2"
-  use_spacetime_bias: false
-  spacetime_bias_layers: 2
-  bias_kwargs:
-    light_speed: 0.299792458
-    num_freq: 16
-    clip_value: 4.0
-    scale_divisor: 1024.0
+  tokenizer_type: "fps"
 
 training_options:
-  batch_size: 128
+  batch_size: 256
   lr: 0.0001
   T_max: 30
   weight_decay: 0.01
