--- a/scripts/configs/i3_energy_reco.cfg
+++ b/scripts/configs/i3_energy_reco.cfg
@@ -30,14 +30,7 @@ model_options:
   downstream_task: "energy_reco"
   loss_fn: "gaussian_nll"
   k_neighbors: 8
-  tokenizer_type: "v1"
-  use_spacetime_bias: true
-  spacetime_bias_layers: 2
-  bias_kwargs:
-    light_speed: 0.299792458
-    num_freq: 16
-    clip_value: 4.0
-    scale_divisor: 1024.0
+  tokenizer_type: "fps"
 
 training_options:
   batch_size: 256
