HNL multiclassification training works, start validating

--- a/scripts/configs/mag_multiclassification.cfg
+++ b/scripts/configs/mag_multiclassification.cfg
@@ -1,14 +1,14 @@
 project_name: "mag_multiclassification"
 project_save_dir: "./experiments"
-training: true
+training: false
 accelerator: "gpu"
 dataloader: "magnemite"
-checkpoint: ""
+checkpoint: "./experiments/checkpoints/final-checkpoint-20251009-061629.pt"
 resume_training: false
 
 data_options:
   data_path:
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/signal/IceCube_DipoleDIS_fixedXS_22Sep2025"
+  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/signal2/IceCube_DipoleDIS_fixedXS_22Sep2025"
   - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/background/22803"
   - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/background/22852"
   - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/background/22853"
@@ -24,24 +24,25 @@ model_options:
   in_channels: 2
   num_patches: 128
   token_dim: 512
-  num_layers: 12
+  num_layers: 10
   num_heads: 8
   hidden_dim: 1024
   dropout: 0.1
   downstream_task: "multiclassification"
+  n_classes: 4
   loss_fn: "focal_loss"
   k_neighbors: 8
   mlp_layers: [256, 512, 768]
   tokenizer_type: "point_cloud"
 
 training_options:
-  batch_size: 256
+  batch_size: 1024
   lr: 0.0001
   lr_schedule: [0, 5]
   weight_decay: 0.01
-  epochs: 5
-  save_epochs: 5
-  num_workers: 8
+  epochs: 3
+  save_epochs: 3
+  num_workers: 16
   precision: "bf16-mixed"
   test_precision: "bf16-mixed"
   grad_clip: 1.0
