--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ requires-python = ">=3.8"
 dependencies = [
     "torch>=2.0",
     "numpy>=1.20.0"
+    "torch-fps>=0.1.0"
 ]
 
 [project.optional-dependencies]
