--- a/scripts/configs/i3_angular_reco.cfg
+++ b/scripts/configs/i3_angular_reco.cfg
@@ -24,9 +24,8 @@ model_options:
   hidden_dim: 512
   dropout: 0.1
   downstream_task: "angular_reco"
-  loss_fn: "combined_vmf_angular"
+  loss_fn: "vmf"
   k_neighbors: 8
-  tokenizer_type: "fps"
 
 training_options:
   batch_size: 256
