--- a/scripts/configs/prometheus_angular_reco.cfg
+++ b/scripts/configs/prometheus_angular_reco.cfg
@@ -22,9 +22,8 @@ model_options:
   hidden_dim: 1024
   dropout: 0.1
   downstream_task: "angular_reco"
-  loss_fn: "vmf"  # Von Mises Fisher loss for directions
+  loss_fn: "vmf"
   k_neighbors: 8
-  tokenizer_type: "fps"
 
 training_options:
   batch_size: 256
