--- a/scripts/configs/prometheus_energy_reco.cfg
+++ b/scripts/configs/prometheus_energy_reco.cfg
@@ -22,9 +22,8 @@ model_options:
   hidden_dim: 1024
   dropout: 0.1
   downstream_task: "energy_reco"
-  loss_fn: "gaussian_nll"  # Gaussian NLL for energy regression
+  loss_fn: "gaussian_nll"
   k_neighbors: 8
-  tokenizer_type: "fps"
 
 training_options:
   batch_size: 256
