--- a/scripts/configs/mag_multiclassification.cfg
+++ b/scripts/configs/mag_multiclassification.cfg
@@ -1,10 +1,10 @@
 project_name: "mag_multiclassification"
-project_save_dir: "./experiments"
-training: false
+project_save_dir: "./experiments/Mag1_2025_10_21"
+training: true
 accelerator: "gpu"
 dataloader: "magnemite"
-checkpoint: "./experiments/checkpoints/final-checkpoint-20251009-061629.pt"
-resume_training: false
+checkpoint: "./experiments/Mag1_initial/checkpoints/final-checkpoint-20251009-061629.pt"
+resume_training: true
 
 data_options:
   data_path:
@@ -40,7 +40,7 @@ training_options:
   lr: 0.0001
   lr_schedule: [0, 5]
   weight_decay: 0.01
-  epochs: 3
+  epochs: 6
   save_epochs: 3
   num_workers: 16
   precision: "bf16-mixed"
