more dropout / adding droppath

--- a/scripts/configs/i3_angular_reco.cfg
+++ b/scripts/configs/i3_angular_reco.cfg
@@ -23,6 +23,7 @@ model_options:
   num_heads: 4
   hidden_dim: 512
   dropout: 0.1
+  drop_path_rate: 0.1
   downstream_task: "angular_reco"
   loss_fn: "vmf"
   k_neighbors: 8
