--- a/scripts/configs/icecube_kaggle_angular_reco.cfg
+++ b/scripts/configs/icecube_kaggle_angular_reco.cfg
@@ -25,6 +25,7 @@ model_options:
   num_heads: 8
   hidden_dim: 1024
   dropout: 0.1
+  drop_path_rate: 0.1
   downstream_task: "angular_reco"
   loss_fn: "vmf"
   k_neighbors: 8
