--- a/scripts/configs/prometheus_energy_reco.cfg
+++ b/scripts/configs/prometheus_energy_reco.cfg
@@ -21,6 +21,7 @@ model_options:
   num_heads: 8
   hidden_dim: 1024
   dropout: 0.1
+  drop_path_rate: 0.1
   downstream_task: "energy_reco"
   loss_fn: "gaussian_nll"
   k_neighbors: 8
