--- a/scripts/configs/mag_multiclassification.cfg
+++ b/scripts/configs/mag_multiclassification.cfg
@@ -1,21 +1,21 @@
 project_name: "mag_multiclassification"
-project_save_dir: "./experiments/Mag1_2025_10_21"
+project_save_dir: "./experiments/Mag1_2025_10_30_pulses"
 training: true
 accelerator: "gpu"
 dataloader: "magnemite"
-checkpoint: "./experiments/Mag1_initial/checkpoints/final-checkpoint-20251009-061629.pt"
-resume_training: true
+checkpoint: ""
+resume_training: false
 
 data_options:
   data_path:
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/signal2/IceCube_DipoleDIS_fixedXS_22Sep2025"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/background/22803"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/background/22852"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/background/22853"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/background/22855"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/background/22856"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/background/23257"
-  - "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/nkamp/ML/analysis/MagNeMITe/mmap_data/Mag0/background/23258"
+  - "/scratch/mag_data/IceCube_DipoleDIS_fixedXS_22Sep2025"
+  - "/scratch/mag_data/22803"
+  - "/scratch/mag_data/22852"
+  - "/scratch/mag_data/22853"
+  - "/scratch/mag_data/22855"
+  - "/scratch/mag_data/22856"
+  - "/scratch/mag_data/23257"
+  - "/scratch/mag_data/23258"
   val_split: 0.2
   split_seed: 42
   use_summary_stats: false
@@ -23,26 +23,23 @@ data_options:
 model_options:
   in_channels: 2
   num_patches: 128
-  token_dim: 512
-  num_layers: 10
-  num_heads: 8
-  hidden_dim: 1024
+  token_dim: 256
+  num_layers: 8
+  num_heads: 4
+  hidden_dim: 512
   dropout: 0.1
   downstream_task: "multiclassification"
   n_classes: 4
   loss_fn: "focal_loss"
   k_neighbors: 8
-  mlp_layers: [256, 512, 768]
-  tokenizer_type: "point_cloud"
 
 training_options:
-  batch_size: 1024
+  batch_size: 64
   lr: 0.0001
-  lr_schedule: [0, 5]
+  T_max: 30
   weight_decay: 0.01
-  epochs: 6
-  save_epochs: 3
-  num_workers: 16
-  precision: "bf16-mixed"
-  test_precision: "bf16-mixed"
+  epochs: 5
+  save_epochs: 1
+  num_workers: 8
+  precision: "bf16"
   grad_clip: 1.0
