support mag length reco, event cuts in dataloader (requires modification to ml_common)

--- a/scripts/configs/mag_length_reco.cfg
+++ b/scripts/configs/mag_length_reco.cfg
@@ -1,9 +1,9 @@
-project_name: "mag_binary_classification"
-project_save_dir: "./experiments/Mag1_2025_11_5_summary_stats"
-training: false
+project_name: "mag_length_reco"
+project_save_dir: "./experiments/Mag2_2025_11_7_summary_stats_with_bkg"
+training: true
 accelerator: "gpu"
 dataloader: "magnemite"
-checkpoint: "./experiments/Mag1_2025_11_5_summary_stats/checkpoints/best-checkpoint.pt"
+checkpoint: ""
 resume_training: false
 
 data_options:
@@ -19,6 +19,11 @@ data_options:
   val_split: 0.2
   split_seed: 42
   use_summary_stats: true
+  # event_cuts:
+  #   hnl_length: [1, 10000]
+  #   "final_energy[1]": [20, 1000000]    # Hadron energy
+  #   "final_energy[2]": [20, 100000]     # Gamma energy
+
 
 model_options:
   in_channels: 9
@@ -28,13 +33,12 @@ model_options:
   num_heads: 4
   hidden_dim: 512
   dropout: 0.1
-  downstream_task: "mag_classification"
-  n_classes: 4
-  loss_fn: "focal_loss"
+  downstream_task: "mag_length_reco"
+  loss_fn: "gaussian_nll"
   k_neighbors: 8
 
 training_options:
-  batch_size: 256
+  batch_size: 512
   lr: 0.0001
   T_max: 30
   weight_decay: 0.01
