adding neptune_varlen support

--- a/scripts/configs/i3_angular_reco.cfg
+++ b/scripts/configs/i3_angular_reco.cfg
@@ -16,6 +16,7 @@ data_options:
   use_summary_stats: true
 
 model_options:
+  model_type: "neptune"
   in_channels: 9
   num_patches: 128
   token_dim: 256
