--- a/scripts/configs/mag_length_reco.cfg
+++ b/scripts/configs/mag_length_reco.cfg
@@ -1,9 +1,9 @@
 project_name: "mag_length_reco"
-project_save_dir: "./experiments/Mag2_2025_11_7_summary_stats_with_bkg"
-training: true
+project_save_dir: "./experiments/Mag2_2025_11_6_summary_stats"
+training: false
 accelerator: "gpu"
 dataloader: "magnemite"
-checkpoint: ""
+checkpoint: "./experiments/Mag2_2025_11_6_summary_stats/checkpoints/best-checkpoint.pt"
 resume_training: false
 
 data_options:
@@ -47,3 +47,5 @@ training_options:
   num_workers: 16
   precision: "bf16"
   grad_clip: 1.0
+  # max_train_batches: 3
+  # max_val_batches: 3
