--- a/scripts/configs/i3_angular_reco.cfg
+++ b/scripts/configs/i3_angular_reco.cfg
@@ -26,7 +26,7 @@ model_options:
   dropout: 0.1
   drop_path_rate: 0.1
   downstream_task: "angular_reco"
-  loss_fn: "vmf"
+  loss_fn: "angular_huber"
   k_neighbors: 8
 
 training_options:
