--- a/scripts/configs/i3_classification.cfg
+++ b/scripts/configs/i3_classification.cfg
@@ -1,4 +1,4 @@
-project_name: "neptune_v2_i3_starting_classification"
+project_name: "what-1_morphology_classification"
 project_save_dir: "./experiments"
 training: true
 accelerator: "gpu"
@@ -24,8 +24,13 @@ model_options:
   hidden_dim: 512
   dropout: 0.1
   drop_path_rate: 0.1
-  downstream_task: "starting_classification"
-  loss_fn: "bce"
+  downstream_task: "morphology_classification"
+  loss_fn: "cross_entropy"
+  loss_kwargs:
+    # sqrt-scaled inverse frequency weights for imbalanced classes
+    # 0: cascade (7.86%), 1: starting (23.27%), 2: throughgoing (27.67%),
+    # 3: stopping (30.69%), 4: uncontained (10.33%), 5: bundle (0.18%)
+    class_weights: [1.98, 1.15, 1.05, 1.00, 1.72, 13.06]
   k_neighbors: 8
 
 training_options:
